#feature/alpha_tejasvi
- Refactored buggy MapEditorController Code plus added while loop to it till exit is not entered.