@@ -1,10 +1,6 @@
 package org.team25.game.controllers;
 
 import java.util.*;
-
-import org.apache.logging.log4j.Level;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
 import org.team25.game.interfaces.main_engine.GameFlowManager;
 import org.team25.game.interfaces.MapEditor;
 import org.team25.game.models.Continent;
@@ -36,17 +32,7 @@ public class MapEditorController implements MapEditor, GameFlowManager {
     /**
      * A data member that stores the list of commands used for editing,validating or saving a map
      */
-    private final List<String> d_MAP_CLI_COMMANDS = Arrays.asList(Constants.SHOW_MAP,Constants.EDIT_MAP,Constants.EDIT_CONTINENT, Constants.EDIT_COUNTRY, Constants.EDIT_NEIGHBOUR,Constants.VALIDATE_MAP);
-
-    /**
-     * A data member that will log the data for the class
-     */
-    private static final Logger d_Logger = LogManager.getLogger(MapEditorController.class);
-
-    /**
-     * A data member to set the log level
-     */
-    Level d_LogLevel=Level.INFO;
+    private final List<String> d_MAP_CLI_COMMANDS = Arrays.asList(Constants.SHOW_MAP,Constants.HELP,Constants.EDIT_MAP,Constants.EDIT_CONTINENT, Constants.EDIT_COUNTRY, Constants.EDIT_NEIGHBOUR,Constants.VALIDATE_MAP);
 
     /**
      * A data member to set status of editing phase
@@ -74,77 +60,68 @@ public class MapEditorController implements MapEditor, GameFlowManager {
      *
      */
 
-    public boolean run()  {
-        d_Logger.log(d_LogLevel,"****************************** Welcome to MAP EDITOR PHASE *********************************");
-        List<String> l_ListStream;
+    public GameMap run()  {
+        System.out.println("****************************** Welcome to MAP EDITOR PHASE *********************************");
+        List<String> l_ListStream = new ArrayList<>();
         while (true) {
-            d_Logger.log(d_LogLevel,"Type the required option for taking action on map:" + "\n" );
-            d_Logger.log(d_LogLevel,"1. Type Help :to get list of commands for different actions  " + "\n" );
-            d_Logger.log(d_LogLevel,"2. Type Exit : to exit from map editor phase and continue playing game"+ "\n");
-            d_Logger.log(d_LogLevel,"*******************************************************************************************************");
+            System.out.println("Type the required option for taking action on map:" + "\n");
+            System.out.println("1. Type Help :to get list of commands for different actions  " + "\n");
+            System.out.println("2. Type Exit : to exit from map editor phase and continue playing game" + "\n");
+            System.out.println("*******************************************************************************************************\n");
             String l_UserInput = d_sc.nextLine();
-            List<String> l_list = new ArrayList<>();
-            if (!(l_UserInput.contains("-"))){
+            List<String> l_tempList = new ArrayList<>();
+            boolean tempStatus = false;
+
+            if (l_UserInput.startsWith("Help") || l_UserInput.startsWith("help")) {
+                l_ListStream.add("help");
+                tempStatus = action(l_ListStream);
+                l_ListStream.clear();
+            } else if (l_UserInput.startsWith("Exit") || l_UserInput.startsWith("exit")) {
+                return d_GameMap;
+            }
+
+
+            if (!(l_UserInput.contains("-add")) || !(l_UserInput.contains("-remove"))) {
                 //adding values that are not for editing
-                l_list.addAll(Arrays.asList(l_UserInput.split("")));
-            }
-            else {
-                //adding values that are for editing
-                for (String l_s : l_UserInput.split("-")) {
-                    if (!l_s.isEmpty()) {
-                        l_list.add(l_s.trim());
-                    }
+                l_tempList.addAll(Arrays.asList(l_UserInput.split(" ")));
+            } else {
+                if(l_UserInput.contains("-add")){
+                    l_tempList.addAll(List.of(l_UserInput.split(" ")));
+                }
+                else if(l_UserInput.contains("-remove")){
+                    l_tempList.addAll(List.of(l_UserInput.split(" ")));
                 }
             }
-            l_ListStream= l_list;
-
+            l_ListStream = l_tempList;
             // validating the input stream passed by user
-            boolean valid=validateUserInput(l_ListStream);
+            boolean valid = validateUserInput(l_ListStream);
 
-            if (!valid) {
-                if (l_UserInput.startsWith("Help") || l_UserInput.startsWith("help")) {
-                    //trying to ask for help again
-                    l_ListStream.add("Help");
-
-                } else {
-                    l_ListStream.addFirst("Exit");
-                }
+            if (valid){
+                boolean l_status = action(l_ListStream);
             }
-
-           return action(l_ListStream);
         }
     }
 
 
     public boolean action(List<String> p_ListStream) {
-        for(int l_index=0;l_index<p_ListStream.size();l_index++) {
-            String[] l_CommandsArray = p_ListStream.get(l_index).split(" ");
+//        for(int l_index=0;l_index<p_ListStream.size();l_index++) {
+            String[] l_CommandsArray = p_ListStream.toArray(new String[0]);
             switch (p_ListStream.getFirst().toLowerCase()) {
 
                 // command to showcase map
                 case Constants.SHOW_MAP: {
-                    //d_GameMap.showMap();
-                    break;
-                }
-
-                // command to editmap
-                case Constants.EDIT_MAP: {
-                    if (l_CommandsArray.length == 1) {
-                        //MapLoader.readMapObject(d_GameMap);
-                        //d_GameMap.showMap();
-                        d_status=true;
-                    }
+                    new ShowMapController(d_GameMap).show(d_GameMap);
                     break;
                 }
 
 
                 //command to edit country in map
                 case Constants.EDIT_COUNTRY: {
-                    switch (l_CommandsArray[0]) {
+                    switch (l_CommandsArray[1]) {
                         case Constants.ADD: {
-                            if (l_CommandsArray.length == 3) {
+                            if (l_CommandsArray.length == 4) {
                                 HashMap<String, Country> l_countries=d_GameMap.get_countries();
-                                if (l_countries.containsKey(l_CommandsArray[1].toLowerCase())) {
+                                if (l_countries.containsKey(l_CommandsArray[2].toLowerCase())) {
                                     try {
                                         throw new ValidationException("Provided country already exist in a map.Try Again with different country !");
                                     } catch (ValidationException e) {
@@ -152,10 +129,10 @@ public class MapEditorController implements MapEditor, GameFlowManager {
                                     }
                                 }
                                 else{
-                                    Country l_Country = new Country(l_CommandsArray[1], l_CommandsArray[2]);
-                                    d_GameMap.get_continents().get(l_CommandsArray[2].toLowerCase()).get_countries().put(l_CommandsArray[1].toLowerCase(), l_Country);
-                                    d_GameMap.get_countries().put(l_CommandsArray[1].toLowerCase(), l_Country);
-                                    d_Logger.log(d_LogLevel,"Country "+l_CommandsArray[1]+" is successfullY added .");
+                                    Country l_Country = new Country(l_CommandsArray[2], l_CommandsArray[3]);
+                                    d_GameMap.get_continents().get(l_CommandsArray[3].toLowerCase()).get_countries().put(l_CommandsArray[2].toLowerCase(), l_Country);
+                                    d_GameMap.get_countries().put(l_CommandsArray[2].toLowerCase(), l_Country);
+                                    System.out.println("Country "+l_CommandsArray[2]+" is successfullY added .");
                                     d_status=true;
                                 }
                             } else {
@@ -168,9 +145,9 @@ public class MapEditorController implements MapEditor, GameFlowManager {
                             break;
                         }
                         case Constants.REMOVE: {
-                            if (l_CommandsArray.length == 2) {
+                            if (l_CommandsArray.length == 3) {
 
-                                Country l_Country = d_GameMap.get_countries().get(l_CommandsArray[1].toLowerCase());
+                                Country l_Country = d_GameMap.get_countries().get(l_CommandsArray[2].toLowerCase());
                                 ArrayList<Country> l_tempList = new ArrayList<Country>();
 
 
@@ -193,11 +170,11 @@ public class MapEditorController implements MapEditor, GameFlowManager {
 //                                        if(!removeNeighbor(d_GameMap, l_Country.get_countryId(), l_neighbor.get_countryId()))
 //                                            return false;
 //                                    }
-                                    d_GameMap.get_countries().remove(l_CommandsArray[1].toLowerCase());
-                                    d_GameMap.get_continents().get(l_Country.get_parentContinent().toLowerCase()).get_countries().remove(l_CommandsArray[1].toLowerCase());
+                                    d_GameMap.get_countries().remove(l_CommandsArray[2].toLowerCase());
+                                    d_GameMap.get_continents().get(l_Country.get_parentContinent().toLowerCase()).get_countries().remove(l_CommandsArray[2].toLowerCase());
 
 
-                                    d_Logger.log(d_LogLevel, "Country " + l_CommandsArray[1] + " is successfullY removed .");
+                                    System.out.println( "Country " + l_CommandsArray[2] + " is successfullY removed .");
                                     d_status=true;
                                }
                             } else {
@@ -216,12 +193,12 @@ public class MapEditorController implements MapEditor, GameFlowManager {
                 // command to edit continent in map
                 case Constants.EDIT_CONTINENT: {
                     if (l_CommandsArray.length > 0) {
-                        switch (l_CommandsArray[0]) {
+                        switch (l_CommandsArray[1]) {
                             case Constants.ADD: {
                                 HashMap<String, Continent> continents = d_GameMap.get_continents();
-                                if (l_CommandsArray.length == 3) {
-                                    if( l_CommandsArray[1]!= null){
-                                        if (continents.containsKey(l_CommandsArray[1].toLowerCase())) {
+                                if (l_CommandsArray.length == 4) {
+                                    if( l_CommandsArray[2]!= null){
+                                        if (continents.containsKey(l_CommandsArray[2].toLowerCase())) {
                                             try {
                                                 throw new ValidationException("Provided continent already exists in map,Try again with different continent !");
                                             } catch (ValidationException e) {
@@ -229,9 +206,9 @@ public class MapEditorController implements MapEditor, GameFlowManager {
                                             }
                                         }
                                         else{
-                                        Continent l_Continent = new Continent(l_CommandsArray[1],l_CommandsArray[2], d_GameMap.get_continents().size()+1);
-                                        d_GameMap.get_continents().put(l_CommandsArray[1].toLowerCase(), l_Continent);
-                                        d_Logger.log(d_LogLevel,"Continent "+l_CommandsArray[1]+" is successfullY added .");
+                                        Continent l_Continent = new Continent(l_CommandsArray[2],l_CommandsArray[3], d_GameMap.get_continents().size()+1);
+                                        d_GameMap.get_continents().put(l_CommandsArray[2].toLowerCase(), l_Continent);
+                                        System.out.println("Continent "+l_CommandsArray[2]+" is successfullY added .");
                                         d_status=true;
                                         }
                                     }
@@ -253,10 +230,10 @@ public class MapEditorController implements MapEditor, GameFlowManager {
                                 break;
                             }
                             case Constants.REMOVE: {
-                                if (l_CommandsArray.length == 2) {
+                                if (l_CommandsArray.length == 3) {
                                     HashMap<String, Continent> l_continents = d_GameMap.get_continents();
 
-                                    if (!l_continents.containsKey(l_CommandsArray[1].toLowerCase())) {
+                                    if (!l_continents.containsKey(l_CommandsArray[2].toLowerCase())) {
                                         try {
                                             throw new ValidationException("Provided Continent does not exist in map.Try Again with valid continent !");
                                         } catch (ValidationException e) {
@@ -264,11 +241,11 @@ public class MapEditorController implements MapEditor, GameFlowManager {
                                         }
                                     }
                                     else{
-                                        HashMap<String,Country> l_countriesMap=l_continents.get(l_CommandsArray[1].toLowerCase()).get_countries();
+                                        HashMap<String,Country> l_countriesMap=l_continents.get(l_CommandsArray[2].toLowerCase()).get_countries();
                                         l_countriesMap.clear();
-                                        l_continents.remove(l_CommandsArray[1].toLowerCase());
-                                        d_Logger.log(d_LogLevel,"All countries from continent "+l_CommandsArray[1]+" are successfulLY removed .");
-                                        d_Logger.log(d_LogLevel,"Continent "+l_CommandsArray[1]+" is successfullY removed .");
+                                        l_continents.remove(l_CommandsArray[2].toLowerCase());
+                                        System.out.println("All countries from continent "+l_CommandsArray[2]+" are successfulLY removed .");
+                                        System.out.println("Continent "+l_CommandsArray[2]+" is successfullY removed .");
                                         d_status=true;
                                     }
                                 } else {
@@ -287,11 +264,11 @@ public class MapEditorController implements MapEditor, GameFlowManager {
 
                 // command to edit neighbor in map
                 case Constants.EDIT_NEIGHBOUR: {
-                    switch (l_CommandsArray[0]) {
+                    switch (l_CommandsArray[1]) {
                         case Constants.ADD: {
-                            if (l_CommandsArray.length == 3) {
-                                Country l_Country1 = d_GameMap.get_countries().get(l_CommandsArray[1].toLowerCase());
-                                Country l_Country2 = d_GameMap.get_countries().get(l_CommandsArray[2].toLowerCase());
+                            if (l_CommandsArray.length == 4) {
+                                Country l_Country1 = d_GameMap.get_countries().get(l_CommandsArray[2].toLowerCase());
+                                Country l_Country2 = d_GameMap.get_countries().get(l_CommandsArray[3].toLowerCase());
 
                                 //handling null values
                                 if (l_Country1==null && l_Country2==null) {
@@ -311,7 +288,7 @@ public class MapEditorController implements MapEditor, GameFlowManager {
                                 else {
                                     l_Country1.get_Neighbours().put(l_Country2.get_countryId().toLowerCase(), l_Country2);
                                     l_Country2.get_Neighbours().put(l_Country1.get_countryId().toLowerCase(), l_Country1);
-                                    d_Logger.log(d_LogLevel, "Neighbour " + l_Country2 + " is successfullY added .");
+                                    System.out.println( "Neighbour " + l_Country2 + " is successfullY added .");
                                     d_status=true;
                                 }
                             } else {
@@ -324,9 +301,9 @@ public class MapEditorController implements MapEditor, GameFlowManager {
                             break;
                         }
                         case Constants.REMOVE: {
-                            if (l_CommandsArray.length == 3) {
-                                Country l_Country1 = d_GameMap.get_countries().get(l_CommandsArray[1].toLowerCase());
-                                Country l_Country2 = d_GameMap.get_countries().get(l_CommandsArray[2].toLowerCase());
+                            if (l_CommandsArray.length == 4) {
+                                Country l_Country1 = d_GameMap.get_countries().get(l_CommandsArray[2].toLowerCase());
+                                Country l_Country2 = d_GameMap.get_countries().get(l_CommandsArray[3].toLowerCase());
 
                                 //handling null values
                                 if (l_Country1==null && l_Country2==null) {
@@ -346,7 +323,7 @@ public class MapEditorController implements MapEditor, GameFlowManager {
                                 else if (l_Country1.get_Neighbours().containsKey(l_Country2.get_countryId().toLowerCase()) && l_Country2.get_Neighbours().containsKey(l_Country1.get_countryId().toLowerCase())) {
                                     l_Country1.get_Neighbours().remove(l_Country2.get_countryId().toLowerCase());
                                     l_Country2.get_Neighbours().remove(l_Country1.get_countryId().toLowerCase());
-                                    d_Logger.log(d_LogLevel,"Neighbour "+l_Country2+" is successfullY removed .");
+                                    System.out.println("Neighbour "+l_Country2+" is successfullY removed .");
                                     d_status=true;
                                 }
                                 else{
@@ -373,39 +350,37 @@ public class MapEditorController implements MapEditor, GameFlowManager {
                 case Constants.VALIDATE_MAP: {
                     MapValidator l_mapValidator=new MapValidator();
                     if (l_mapValidator.ValidateMapObject(d_GameMap)) {
-                        d_Logger.log(d_LogLevel,"Map Validation successful");
+                        System.out.println("Map Validation successful");
                         d_status=true;
                     } else {
-                        d_Logger.log(d_LogLevel,"Map Validation failed ! check the provided inputs again.");
+                        System.out.println("Map Validation failed ! check the provided inputs again.");
                     }
                     break;
                 }
 
-                //To exit from map editing phase
-                case Constants.EXIT: {
-                    d_status=true;
-                    //d_GameMap.clearGameMap();
-                }
                 //list of commands for assist Player
-                default: {
-                    d_Logger.log(d_LogLevel,"Commands List for different operations:");
-                    d_Logger.log(d_LogLevel,"****************************************************************************************************************************");
-                    d_Logger.log(d_LogLevel,"To edit map file  : editmap filename");
-                    d_Logger.log(d_LogLevel,"****************************************************************************************************************************");
-                    d_Logger.log(d_LogLevel,"To add or remove a continent : editcontinent -add continentID continentvalue -remove continentID");
-                    d_Logger.log(d_LogLevel,"To add or remove a country : editcountry -add countryID continentID -remove countryID");
-                    d_Logger.log(d_LogLevel,"To add or remove a neighbor to a country : editneighbor -add countryID neighborcountryID -remove countryID neighborcountryID");
-                    d_Logger.log(d_LogLevel,"****************************************************************************************************************************");
-                    d_Logger.log(d_LogLevel,"To save map file : savemap filename");
-                    d_Logger.log(d_LogLevel,"****************************************************************************************************************************");
-                    d_Logger.log(d_LogLevel,"Additional map commands:");
-                    d_Logger.log(d_LogLevel,"To show the map: showmap");
-                    d_Logger.log(d_LogLevel,"To validate map: validatemap");
-                    d_Logger.log(d_LogLevel,"****************************************************************************************************************************");
-
+                case Constants.HELP: {
+                    System.out.println("Commands List for different operations:\n");
+                    System.out.println("****************************************************************************************************************************");
+                    System.out.println("To edit map file  : editmap filename\n");
+                    System.out.println("****************************************************************************************************************************");
+                    System.out.println("To add or remove a continent : editcontinent -add continentID continentvalue -remove continentID\n");
+                    System.out.println("To add or remove a country : editcountry -add countryID continentID -remove countryID\n");
+                    System.out.println("To add or remove a neighbor to a country : editneighbor -add countryID neighborcountryID -remove countryID neighborcountryID\n");
+                    System.out.println("****************************************************************************************************************************");
+                    System.out.println("To save map file : savemap filename\n");
+                    System.out.println("****************************************************************************************************************************");
+                    System.out.println("Additional map commands:\n");
+                    System.out.println("To show the map: showmap\n");
+                    System.out.println("To validate map: validatemap\n");
+                    System.out.println("****************************************************************************************************************************");
+                    break;
+                }
+                default:{
+                    System.out.println("Add a Valid Command Please");
                 }
             }
-        }
+//        }
         return d_status;
     }
 
@@ -420,8 +395,7 @@ public class MapEditorController implements MapEditor, GameFlowManager {
         if (!(p_InputList.isEmpty())) {
             String l_InputCommand = p_InputList.getFirst();
             int index= d_MAP_CLI_COMMANDS.indexOf(l_InputCommand.toLowerCase());
-            if(index!=-1)
-                return true;
+            return index != -1;
         }
         return false;
     }
